--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,24 @@ version: '3.8'
 
 services:
   web:
-    build:
-      context: .
+    build: .
     env_file:
-      - .env
+      - ./.env
+    volumes:
+      - ./project:/home/user/project
+      - ./app.py:/home/user/app.py
     ports:
       - 8000:8000
+    depends_on:
+      - db
 
   db:
     image: postgres:9.6
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: test_db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=budget_db
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
     ports:
       - 5432:5432
